--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "https": "^1.0.0",
+    "uglify": "^0.1.5",
     "uglify-js": "^3.17.4"
   }
 }
